# auv_control_system

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  TODO.md  build.py  codes.py  comm.py  comm_test.py  commands.txt  commmmm.py  connection.py  environment.yml  template.py  test  test.cpp  tree.py
Control/: CMakeLists.txt  bridge.py  build.py
Control/include/: environment.h  environment_system.h  main_system.h  mission.h  mission_imp.h  mission_sonar_imp.h  mission_system.h  motion_system.h  topics.hpp
Control/include/communication/: communication_methods.h  topics.hpp
Control/include/control/: nlmpc.h  vehicle_model.h
Control/include/mission/: mission_imp.h  mission_sonar_imp.h
Control/include/system/: control_system.h
Control/src/: environment_system.cpp  main.cpp  main_system.cpp  mission_system.cpp  motion_system.cpp  nlmpc.cpp
Control/src/control/: nlmpc.cpp  vehicle_model.cpp
Control/src/mapping/: environment_helper.cpp
Control/src/system/: control_system.cpp  mission_system.cpp  motion_system.cpp
Simulation/Assets/Scenes/: SampleScene.unity
Simulation/Assets/Scripts/: SonarTCPPublisher.cs  SonarTCPSubscriber.cs  bridge.py
Simulation/Control/: build.py  comm.py
Simulation/Control/include/: mission_system.h  motion_system.h  topics.hpp
Simulation/Control/src/: control_system.cpp  environment_system.cpp  mission_system.cpp  motion_system.cpp  nlmpc.cpp
Simulation/Model/: data_generation.cpp  data_generation_v.cpp  environment_map.cu  environment_system.cpp  environment_system.h  motion_system.h  render.py  subsystem.h  topics.hpp
Simulation_old/Control/: CMakeLists.txt
Simulation_old/Control/include/: main_system.h  nlmpc.h  topics.hpp
Simulation_old/Control/src/: motion_system.cpp
Simulation_old/Model/: communication_system.h  test.cpp
Test/: CMakeLists.txt  build.py
Test/Model/: data.hpp  environment.h  environment_map.cu  generate.cpp  helpers.hpp  test.cpp  visualization.hpp  visualize.py  visualized.cpp
Test/Model/others/: vd_test.cpp
Test/Model/src/: main.cpp  nlmpc.cpp
Test/include/: mission_system.h  motion_system.h
Test/src/: main.cpp  main_system.cpp
connection/: comm.py
docs/: DYNAMICS_README.md  IMITATION_README.md  MODULAR_README.md
environment/: casadi_mpc.hpp  data_generate  data_generate.cpp  model_test  mpc2.cpp  mpc4  mpc4.cpp  test  test.cpp
environment/il/: casadi_mpc.hpp  config.json  data_generate  data_generate.cpp  fossen_net.pth  libdynamics_func2.c  libdynamics_func2.h  mpc_data.h5  show_hdf.py  train.py  train2.py
environment/il-map/: EnvironmentMap.cu  EnvironmentMap.cuh  EnvironmentMap.h  EnvironmentMapWrapper.cu  HostController.cpp  HostController.hpp  main  main.cpp  main.cu  map_system  map_system.cpp  validation.cpp  validator  visualize.py
environment/il/data/: best_model.pth  fossen_net.pth  mpc_data_test.csv
environment/map-entegrated-mpc/: AStar.cu  AStar.h  EnvironmentIntegrator.hpp  EnvironmentMap.cu  EnvironmentMap.h  MapController.cpp  MapController.h  barrier.cu  environment.h  environment_astar.cu  environment_global.cu  environment_helper.cpp  environment_map.cu  main  main.cpp  mpc.cpp  mpc.h  nlmpc.cpp  nlmpc.h  nlmpc_upated.cpp  nlmpc_updated.h  path_history.txt  reference_history.txt  render.py  state_history.txt  vehicle_model.cpp  vehicle_model.h  visualize.py
include/: EnvironmentMap.h  communication_system.h  control_system.h  environment_state.h  environment_system.h  main_system.h  mission_system.h  motion_system.h  resource_wrappers.h  sensor_data.h  sensor_system.h  shared_data.h  shared_queue.h  signal_data.h  subdata.h  subsystem.h  system_data.h  topics.hpp  vehicle_model.h
include/mapping/: environment.h
include/mission/: mission.h  mission_sonar_imp.h
include/system/: environment_system.h  main_system.h  mission_system.h  motion_system.h  subsystem.h
model/: IMITATION_README.md  train.ipynb
model/data/: check_data.py
model/pretrained_models/: best_model.pth
model/test/: CMakeLists.txt  README.md
model/test/include/: model_inference.h  utils.h
model/test/src/: main.cpp  model_inference.cpp  model_inference.h  utils.cpp  utils.h
src/: communication_system.cpp  control_system.cpp  env_map.cu  environment_state.cpp  environment_system.cpp  main.cpp  main_system.cpp  mission_system.cpp  motion_system.cpp  sensor_system.cpp  system_data.cpp
src/control/: nlmpc.cpp
src/mapping/: environment_astar.cu  environment_global.cu  environment_map.cu
src/mission/: mission_sonar_imp.cpp
src/system/: environment_system.cpp  main_system.cpp  mission_system.cpp  motion_system.cpp
